# stoked-semantic

./: .gitignore  OUTREACH_EMAIL_DRAFT.md  PRELIMINARY_FINDINGS.md  README.md  nextsteps.md  pyproject.toml
results/: analysis.md  analysis_v2.md  analysis_v3.md
results/phase1_hard/: diagnostics_by_layer.csv  probe_accuracy_by_layer.csv  summary.json
results/phase1_structural/: diagnostics_aggregate.csv  diagnostics_all_runs.csv  probe_accuracy_aggregate.csv  probe_accuracy_all_runs.csv  summary.json  template_group_accuracy_aggregate.csv  template_group_accuracy_all_runs.csv
results/phase4_controls_base/: diagnostics_aggregate.csv  diagnostics_all_runs.csv  geometry_link_by_seed.csv  geometry_link_summary.csv  geometry_link_summary.json  probe_accuracy_aggregate.csv  probe_accuracy_all_runs.csv  summary.json  template_group_accuracy_aggregate.csv  template_group_accuracy_all_runs.csv
results/phase4_controls_bert_large_full/: diagnostics_aggregate.csv  diagnostics_all_runs.csv  geometry_link_by_seed.csv  geometry_link_summary.csv  geometry_link_summary.json  probe_accuracy_aggregate.csv  probe_accuracy_all_runs.csv  template_group_accuracy_aggregate.csv
results/phase4_matched_negative_v3/: diagnostics_aggregate.csv  diagnostics_all_runs.csv  probe_accuracy_aggregate.csv  probe_accuracy_all_runs.csv  summary.json  template_group_accuracy_aggregate.csv  template_group_accuracy_all_runs.csv
scripts/: analyze_geometry_link.py  audit_dataset_bias.py  run_phase1.py  run_phase4_scaleup_pilot.py  summarize_phase1.py
src/stoked_semantic/: __init__.py  cli.py  data.py  (+8 more)
(+115 files in other folders)
