[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stoked-semantic"
version = "0.1.0"
description = "Phase 1 probing experiments for exact, pairwise, and triadic structure in transformer hidden states."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "torch>=2.9",
  "transformers>=5.0.0",
  "numpy>=2.3",
  "matplotlib>=3.10",
  "tqdm>=4.67",
]

[project.scripts]
stoked-phase1 = "stoked_semantic.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
